[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/interface/theme.tres" type="Theme" id=1]
[ext_resource path="res://source/interface/InfoPopup.gd" type="Script" id=2]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 1, 1, 1, 1 )

[node name="InfoPopup" type="PopupPanel"]
visible = true
margin_right = 8.0
margin_bottom = 8.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 2.0
margin_right = 88.0
margin_bottom = 103.0
custom_constants/separation = 1

[node name="Name" type="Label" parent="VBoxContainer"]
margin_right = 85.0
margin_bottom = 10.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Sternbucks"
align = 1

[node name="CostLabel" type="Label" parent="VBoxContainer"]
margin_top = 11.0
margin_right = 85.0
margin_bottom = 21.0
text = "Investment 30.000$"
align = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 85.0
margin_bottom = 26.0
custom_styles/separator = SubResource( 1 )

[node name="RevenueLabel" type="Label" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 85.0
margin_bottom = 37.0
text = "Max Income: 8.000$"
align = 1

[node name="IncomeLabel" type="Label" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 85.0
margin_bottom = 48.0
text = "Max Income: 8.000$"
align = 1

[node name="UpkeepLabel" type="Label" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 85.0
margin_bottom = 59.0
text = "Upkeep: 2.000$"
align = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 85.0
margin_bottom = 64.0
custom_styles/separator = SubResource( 1 )

[node name="FlavourLabel" type="Label" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 85.0
margin_bottom = 101.0
text = "Offers residents a place to relax and socialize"
align = 1
autowrap = true
